# WinCore

./: CMakeLists.txt  main.c  test.c
include/WinCore/: Gdi32.h  Types.h  User32.h  Windows.h
include/WinCore/GL/: GL.h
source/WinCore/: Application.cpp  Application.hpp  BaseWindow.cpp  BaseWindow.hpp  ClassRegistrator.cpp  ClassRegistrator.hpp  Gdi32.cpp  User32.cpp  WindowClassA.cpp  WindowClassA.hpp  WindowCreator.cpp  WindowCreator.hpp  WindowManager.cpp  WindowManager.hpp
source/WinCore/Backends/Null/WinCore/: EventHandler.cpp  EventHandler.hpp  Initializer.cpp  Initializer.hpp  Window.cpp  Window.hpp
source/WinCore/Backends/SDL2/WinCore/: EventHandler.cpp  EventHandler.hpp  Initializer.cpp  Initializer.hpp  Window.cpp  Window.hpp
source/WinCore/Backends/SDL3/WinCore/: DeviceContext.cpp  DeviceContext.hpp  EventHandler.cpp  EventHandler.hpp  Initializer.cpp  Initializer.hpp  Window.cpp  Window.hpp
